--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -24,7 +24,7 @@
 #    See the documentation for each action used below for the recommended IAM policies for this IAM user,
 #    and best practices on handling the access key credentials.
 
-name: CI
+name: Deploy to AWS
 
 on:
   pull_request:
@@ -48,8 +48,6 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     # environment: production
-    needs: ["test", "lint"]
-
     steps:
     - name: Checkout
       uses: actions/checkout@v3
