--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -47,7 +47,7 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    # environment: production
+    environment: production
     steps:
     - name: Checkout
       uses: actions/checkout@v3
