--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "@nestjs/swagger": "^6.2.1",
     "cache-manager": "^5.1.7",
     "cache-manager-redis-store": "^3.0.1",
+    "cache-manager-redis-yet": "^4.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "install": "^0.13.0",
     "mongoose": "^6.10.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
