--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main", "develop" ]
-  [workflow_call]
+  workflow_call:
 
 jobs:
   code_analyze:
