--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -10,7 +10,7 @@ on:
     branches: ['main']
   pull_request:
     branches: ['main', 'develop']
-  [workflow_call]
+  workflow_call:
 
 jobs:
   analyze:
