--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -13,8 +13,11 @@ on:
   workflow_call:
 
 jobs:
+  tests:
+    uses: ./.github/workflows/ci.yml
   analyze:
     name: Analyze code
+    meeds: [tests]
     runs-on: ubuntu-latest
     permissions:
       actions: read
