--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -17,7 +17,7 @@ jobs:
     uses: ./.github/workflows/ci.yml
   analyze:
     name: Analyze code
-    meeds: [tests]
+    needs: [tests]
     runs-on: ubuntu-latest
     permissions:
       actions: read
