refactor: small cleaning and minor fixes

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -22,6 +22,7 @@ services:
       - mongo-database
       - mongo-express
       - redis
+      - redis-commander
     volumes:
       - .:/usr/src/app
     restart: unless-stopped
