--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "docker:dev:up": "docker-compose --env-file ./.env -f docker-compose.dev.yml -f docker-compose/docker-compose.db.yml -f docker-compose/docker-compose.db-gui.yml -f docker-compose/docker-compose.redis.yml up -d",
+    "docker:dev:up": "docker-compose --env-file ./.env -f docker-compose.dev.yml -f docker-compose/docker-compose.db.yml -f docker-compose/docker-compose.db-gui.yml -f docker-compose/docker-compose.redis.yml -f docker-compose/docker-compose.redis-gui.yml up -d",
     "docker:dev:down": "docker-compose down"
   },
   "dependencies": {
